--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </div>
 </div>
 
-<div class="article">
+<article class="wrapper">
+
+<div class="open">
     <h2 class="open__header">Години роботи</h2> <!--display block?-->
     <div class="open__wrapper">
         <p class="open__desc">Пн - Пт<span class="open__hours">12:00 - 22:00</span></p>
@@ -99,7 +101,6 @@
     </div>
 </section>
 
-<div class="article">
     <h2 class="special__header">Новини та Акційні пропозиції</h2>
     <div class="special__wrapper">
         <div class="special__img">
@@ -182,9 +183,9 @@
     </div>
 
     <!--</section>-->
-</div>
+  </article>
 
-<!--<article class="article">-->
+<!--<article>-->
 <!--    <h2 class="about__header">Про нас</h2>-->
 <!--    <div class="about__desc">-->
 <!--        <p>Artemis – від ім’я Artemisia першої й єдиної в історії жінки-адмірала персидського флоту. Красива,-->
@@ -213,7 +214,7 @@
 <!--    <img src="./img/icon-logo-gold.svg" alt="" class="about__img">-->
 <!--</article>-->
 
-<div class="article">
+<div class="reservation">
     <h2 class="reservation__header">Забронюй столик онлайн!</h2>
     <div class="reservation__desc">
         <p>Ви можете забронювати стіл з 12:00 до 21:30 з понеділка по п'ятницю <!-- та з 15:00
@@ -268,6 +269,5 @@
     </div>
 </footer>
 
-<script src="js/script.js"></script>
 </body>
 </html>
