--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </a>
                     </div>
                     <div class="footer__social">
-                        <a href="https://www.instagram.com/artemisbarkyiv/" class="footer__link" target="_blank">
+                        <a href="https://www.instagram.com/artemiskyiv/" class="footer__link" target="_blank">
                             <img src="img/icon_insta.svg" alt="link instagram" class="footer__qrcode">
                         </a>
                     </div>
